--- a/basics/templates/basics/needs_all.html
+++ b/basics/templates/basics/needs_all.html
@@ -74,7 +74,7 @@
                                         <div class="col-sm-12" data-toggle="modal" data-target=".{{ need.id }}" id="cursor-pointer">
                                             <h4 class="list-group-item-heading">{{ need.headline }}</h4>
                                             <p class="list-group-item-text" style="word-wrap: break-word;">{{ need|get_short_text:160 }}</p>
-                                            <h6><br>from: {{ need.date }} / category: {{ need.categorie.name }}{% if need.group %} / by: <span style="color: #70962c;">{{ need.group.name }}</span>{% endif %}</h6>
+                                            <h6><br><i>from {{ need.date }} in category {{ need.categorie.name }}{% if need.group %} by <span style="color: #70962c;">{{ need.group.name }}</span>{% endif %}</i></h6>
                                         </div>
                                     </div>
                                 </a>
@@ -87,7 +87,7 @@
                                                     <span class="glyphicon glyphicon-comment"></span> Help
                                                 </div>
                                             </a>
-                                             <a class="list-group-footer-button" type="button" style="cursor:pointer" id="report{{need.pk}}" onclick="report({{need.pk}})"">
+                                             <a class="list-group-footer-button" type="button" style="cursor:pointer" id="report{{need.pk}}" onclick="report({{need.pk}})">
                                                 <div class="col-sm-6">
                                                      <span class="glyphicon glyphicon-ban-circle"></span> Report
                                                 </div>
@@ -116,7 +116,7 @@
                                             <span aria-hidden="true">&times;</span>
                                         </button>
                                         <h2>{{need.headline}}</h2>
-                                        <h6>from: {{ need.date }} / category: {{ need.categorie.name }}{% if need.group %} / by: <a id="green-link" href="{% url 'basics:group_detail_for_user' name=need.group.name %}">{{ need.group.name }}</a>{% endif %}</h6>
+                                        <h6><i>from {{ need.date }} in category {{ need.categorie.name }}{% if need.group %} by <a id="green-link" href="{% url 'basics:group_detail_for_user' name=need.group.name %}">{{ need.group.name }}</a>{% endif %}</i></h6>
                                     </div>
                                     <div class="modal-body">
                                         <p style="word-wrap: break-word;">{{ need.text|linebreaksbr }}</p>
