fixed faq signin

--- a/basics/templates/basics/faq_signin.html
+++ b/basics/templates/basics/faq_signin.html
@@ -63,33 +63,6 @@
     background-color: #EDEDED;
 }
 
-/*.panel-heading [data-toggle="collapse"]:after {*/
-    /*font-family: 'Glyphicons Halflings';*/
-    /*content: "";*/
-     /* "play" icon */
-     /*float: right;
-    color: #F58723;
-    font-size: 18px;
-    line-height: 22px;*/
-    /* rotate "play" icon from > (right arrow) to down arrow */
-    /*-webkit-transform: rotate(-90deg);
-    -moz-transform: rotate(-90deg);
-    -ms-transform: rotate(-90deg);
-    -o-transform: rotate(-90deg);
-    transform: rotate(-90deg);*/
-}
-
-/*.panel-heading [data-toggle="collapse"].collapsed:after {*/
-    /* rotate "play" icon from > (right arrow) to ^ (up arrow) */
-    /*-webkit-transform: rotate(90deg);
-    -moz-transform: rotate(90deg);
-    -ms-transform: rotate(90deg);
-    -o-transform: rotate(90deg);
-    transform: rotate(90deg);*/
-    /*color: #454444;
-}*/
-
-
 </style>
 
 <div id="standard-modal">
@@ -193,7 +166,7 @@
                             <img src="http://tubtul.org/actofgoodsFotos/user_profile.PNG" alt="" style="width:80%;">
 			<br>
 			<br>
-			<p> As a user you can create a profile. You can also indicate your location radius of where you can provide help. By implementing your telephone number, you can automatically send your phone number to the people that you chat with simply by clicking on a button.  If you want to get emails notifying you of different needs in your area, check on “inform me via email”.  </p>
+			<p> As a user you can create a profile. You can also indicate your location radius of where you can provide help. By implementing your telephone number, you can automatically send your phone number to the people that you chat with simply by clicking on a button.  If you want to get emails notifying you of different needs in your area, check on ï¿½inform me via emailï¿½.  </p>
                             <br>
                             <img src="http://tubtul.org/actofgoodsFotos/edit_your_profile.PNG" alt="" style="width:80%;">
                         </div>
@@ -274,34 +247,34 @@
                     <div id="collapseGroups" class="panel-collapse collapse">
                         <div class="panel-body">
                             <p> Organization's enable NGO's to stay connected on the Act of Goods website. </p>
-			   <p> <b>Your Organization’s Profile </b></p>
+			   <p> <b>Your Organizationï¿½s Profile </b></p>
 			   <p> You can edit your profile at anytime, ensuring that all of your information is up-to-date. This will allow people to connect through act of goods. </p>
                             <br>
                             <img src="http://tubtul.org/actofgoodsFotos/organisation_overview.PNG" alt="" style="width:100%;">
                             <br>
                             <br>
-			   <p> <b>Your Organization’s Profile </b></p>
-			   <p> You can edit your profile at anytime, ensuring that all of your information is up-to-date. This will allow people to connect through act of goods. <br> As a member of an organization you can search for more members of your organization on acts of goods and connect with them and add them to the organization’s act of goods group. <br>
+			   <p> <b>Your Organizationï¿½s Profile </b></p>
+			   <p> You can edit your profile at anytime, ensuring that all of your information is up-to-date. This will allow people to connect through act of goods. <br> As a member of an organization you can search for more members of your organization on acts of goods and connect with them and add them to the organizationï¿½s act of goods group. <br>
 If someone leaves a group, they are unable to automatically join again. Someone must send them an invitation again.  </p>
                             <br>
                             <img src="http://tubtul.org/actofgoodsFotos/organisation_overview.PNG" alt="" style="width:100%;">
                            <br>
                             <br>
-			   <p> <b>Edit Your Organization’s Profile </b></p>
+			   <p> <b>Edit Your Organizationï¿½s Profile </b></p>
 			   <p> You can edit your profile at anytime, ensuring that all of your information is up-to-date. This will allow people to connect through act of goods. </p>
                             <br>
                             <img src="http://tubtul.org/actofgoodsFotos/organisation_edit_profil.PNG" alt="" style="width:100%;">
                            <br>
                             <br>
 			   <p> <b>Areas claimed:</b></p>
-			   <p> Organizations can claim areas of land where help is needed. In order to make a new claim, simply click on the “new claim” button located in the top left corner and click on the area of land that needs help.  As the person who claims this need, you are responsible for ensuring that enough help is provided. The colours indicate the various organizations that claimed land. The various organizations providing help can also be seen in the list below.<br>When you click on the organization, you can also see what other organizations have requested in other areas.<br>With the filter button, you can filter needs and areas where claims have been made. </p>
+			   <p> Organizations can claim areas of land where help is needed. In order to make a new claim, simply click on the ï¿½new claimï¿½ button located in the top left corner and click on the area of land that needs help.  As the person who claims this need, you are responsible for ensuring that enough help is provided. The colours indicate the various organizations that claimed land. The various organizations providing help can also be seen in the list below.<br>When you click on the organization, you can also see what other organizations have requested in other areas.<br>With the filter button, you can filter needs and areas where claims have been made. </p>
                             <br>
                             <img src="http://tubtul.org/actofgoodsFotos/areas_claimed.PNG" alt="" style="width:100%;">
                         </div>
                     </div>
                 </div>
-           
-                
+
+
             </div>
 		</div>
 	</div>
