followed information @timeline

--- a/basics/templates/basics/home.html
+++ b/basics/templates/basics/home.html
@@ -226,6 +226,7 @@
                                 <option value="needs_help">needs where you helped</option>
                                 <option value="posted_information">posted information</option>
                                 <option value="written_comments">written comments</option>
+                                <option value="followed_infos">followed information</option>
                             </select>
                         </div>
                         <div  class="col-sm-4" style="margin-bottom: 15px;">
@@ -251,6 +252,7 @@
                                 <option value="needs_help">needs where you helped</option>
                                 <option value="posted_information">posted information</option>
                                 <option value="written_comments">written comments</option>
+                                <option value="followed_infos">followed information</option>
                             </select>
                         </div>
                         <div  class="col-sm-2" style="margin-top: 15px; margin-bottom: 10px;">
