--- a/basics/templates/basics/faq_signin.html
+++ b/basics/templates/basics/faq_signin.html
@@ -247,7 +247,7 @@
                     <div id="collapseGroups" class="panel-collapse collapse">
                         <div class="panel-body">
                             {% if user.groups.all|length == 0 %}
-                            <p>Organization's are groups </p>
+                            <p>A organization is supposed to represent an actual organization such as NATO or Greenpeace. This platform can help many organisations further their initiatives and make a meaningful impact on the lives of others.</p>
 
                             {%else%}
                            <p> Organization's enable NGO's to stay connected on the Act of Goods website. </p>
